run_outputs/20251112_175654_smokenotrain/runner.log
  File "C:\Users\loweb\AI_Financial_Sims\HO\HO 1st time 5080\canonical_train_2bANN2_HO.py", line 37
    f.write(f\"{k}: {v}\\n\")
              ^
SyntaxError: unexpected character after line continuation character
